--- a/1-HTML_CSS_JS/login/style/style.css
+++ b/1-HTML_CSS_JS/login/style/style.css
@@ -5,71 +5,82 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.x-center {
+main{
+    background-image: radial-gradient(  rgba(7,54,59,1),rgb(0, 0, 0));
+}
+
+.container {
+    padding: 0 10px;
     margin: 0 auto;
-    width: auto;
-    height: auto;
-
-
-}
-
-.content-25 {
-    width: 350px;
+    max-width: 350px;
     height: 100vh;
-}
-
-.content-100 {
-    width: 100%;
-    height: auto;
+    display: flex;
+    align-items: center;   
 }
 
 .dp-flex {
     display: flex;
 }
 
-form {
-    flex-direction: column;
-    align-self: center;
-    border: solid 1px gray;
-    padding: 10px;
-
-}
-
-label,
-button {
+.font-20 {
     font-size: 20px;
 }
 
-input,
-button {
-    border-radius: 2px;
-
+.title{
+    font-weight: 400;
+    margin-bottom: 20px;
+    align-items: center;
+    justify-content: space-between;
 }
 
-input {
+.material-symbols-outlined{
+    margin-right: 5px;
+}
+
+.form,
+input,
+button {
+    border-radius: 3px;
+}
+
+.form {
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    border: solid 1px gray;
+    padding: 15px;
+    background-color: rgb(236, 236, 236);    
+}
+
+.input {
     border: 1px solid gray;
     margin-bottom: 5px;
     padding: 10px;
     outline: none;
     background-color: rgba(234, 255, 0, 0.1);
-    
+    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.6);
+    transition: 0.3s ease-in-out;
 }
 
-input:focus {
+.input:focus {
     background-color: rgba(250, 250, 43, 0.3);
-
+    box-shadow: 2px 3px 10px 3px rgba(0,0,0,0.6);
+    transform: translate(1px,1px);
 }
 
-button {
+.btn {
     padding: 17px 0;
     color: #fff;
-    background-color: #1e8fffe5;
+    background-color: #1EAAF1;
     outline: none;
     border: 0px;
-    box-shadow: 2px 2px 5px 3px rgba(0,0,0,0.6);
-    transition: 0.5s ease-in-out;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.6);
+    transition: 0.3s ease-in-out;    
 }
 
-button:hover{
-    box-shadow: 1px 5px 10px 3px rgba(0,0,0,0.6);
+.btn:hover{
+    cursor: pointer;
+    background-color: #1e8fffc9;
+    box-shadow: 2px 3px 10px 3px rgba(0,0,0,0.6);
+    transform: translate(1px,1px);
 }
