--- a/1-HTML_CSS_JS/panel/style/style.css
+++ b/1-HTML_CSS_JS/panel/style/style.css
@@ -5,11 +5,6 @@
     font-family: Arial, Helvetica, sans-serif;
     list-style: none;
 }
-
-body {
-    display: flex;
-}
-
 .content {
     background-color: black;
 }
@@ -18,15 +13,16 @@ body {
     font-size: 25px;
 }
 
-header {
+main {
     display: flex;
     flex-direction: row;
-    width: 350px;
+    width: 100%;
     height: 100vh;
 }
 
 .menu {
-    width: 100%;
+    width: 350px;
+    height: 100%;
     min-width: min-content;
     border-right: 2px solid rgba(200, 200, 200, 0.567);
 }
@@ -53,8 +49,8 @@ span {
     margin-right: 15px;
 }
 
-main {
+.content {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-image: radial-gradient(rgba(7, 54, 59, 1), rgb(0, 0, 0));
 }
